<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <!-- service switch -->
    <RelativeLayout
        android:id="@+id/rl_switch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/preference_item_height"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/preference_item_margin"
        android:layout_marginRight="@dimen/preference_item_margin" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:text="@string/service"
            android:textColor="@drawable/menu_text_selector"
            android:textSize="@dimen/preference_item_text_size" />

        <ImageView
            android:id="@+id/iv_service_swich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/switch_off" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>
    
    
    <!--Exit Button -->
    <RelativeLayout
        android:id="@+id/rl_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/preference_item_height"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/preference_item_margin"
        android:layout_marginRight="@dimen/preference_item_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/exit"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@drawable/menu_text_selector"
            android:textSize="@dimen/preference_item_text_size" />

    </RelativeLayout>
    
    <!--Setting Button -->
    <RelativeLayout
        android:id="@+id/rl_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/preference_item_height"
        android:layout_above="@id/rl_exit"
        android:layout_marginLeft="@dimen/preference_item_margin"
        android:layout_marginRight="@dimen/preference_item_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/setting"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@drawable/menu_text_selector"
            android:textSize="@dimen/preference_item_text_size" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/preference_item_margin"
            android:layout_marginRight="@dimen/preference_item_margin"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

</RelativeLayout>